<resources>
    <string name="app_name">MangXaHoiGDUers</string>
    <string name="title_activity_navigation_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Email">Nhập Email</string>
    <string name="email">Địa chỉ Email</string>
    <string name="DangNhap">Đăng nhập</string>
    <string name="DangKy">Đăng ký</string>
    <string name="Huy">Hủy</string>
    <string name="TrangChu">Trang chủ</string>
    <string name="DanhSach">Danh sách</string>
    <string name="TimKiem">Tìm kiếm</string>
    <string name="TinNhan">Tin nhắn</string>
    <string name="dich">Dịch ngữ Anh-Việt</string>
    <string name="TrangCaNhan">Trang cá nhân</string>
    <string name="nhapMaSo">Nhập mã số</string>
    <string name="nhapSDT">Nhập số điện thoại</string>
    <string name="ngaySinh">Ngày/ Thánh/ Năm Sinh</string>
    <string name="chuyenNganh">Chuyên ngành</string>
    <string name="lopHoc">Lớp học</string>
    <string name="hoTen">Họ và tên</string>
    <string name="SDT">Số điện thoại</string>
    <string name="Maso">Mã số</string>
    <string name="doiMatKhau">Đổi mật khẩu</string>
    <string name="dangXuat">Đăng xuất</string>
    <string name="baoCao">Báo cáo</string>
    <string name="baoCaoLoi">Báo cáo lỗi với admin</string>
    <string name="dangThongBao">Đăng thông báo</string>
    <string name="xemHinhAnh">Ảnh thông báo</string>
    <string name="dongY">Đồng Ý</string>
    <string name="nhapThongBao">Nhập thông báo</string>
    <string name="nhapBanDich">Nhập bản dịch</string>
    <string name="chonAnh">Chọn ảnh</string>
    <string name="facebook">Facebook</string>
    <string name="tiemKiem">Nhập tìm kiếm</string>
    <string name="zalo">Zalo</string>
    <string name="gitHub">GitHub</string>
    <string name="soDienThoaiDev">+84941383163</string>
    <string name="facebookDev">https://www.facebook.com/ven.nguyen.549</string>
    <string name="githubDev">https://github.com/nguyenven299</string>
    <string name="EmailDev">nguyenven1999@gmail.com</string>
    <string name="danhSachNguoiDung">Danh sách người dùng</string>
    <string name="danhSachTinNhan">Danh sách nhắn tin</string>
    <string name="trangCaNhan">Trang cá nhân</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bangNhap">Bảng nhập dịch</string>
    <string name="bangDich">Bảng dịch ngữ</string>
    <string name="anhViet">Anh - Việt</string>
    <string name="vietAnh">Việt - Anh</string>
    <string name="matKhau">Mật khẩu</string>
    <string name="nhapLaiMatKhau">Nhập lại mật khẩu</string>
</resources>