<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="nguoidung"
            type="com.example.mangxahoigduers.NguoiDungModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        tools:layout_editor_absoluteY="81dp">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextMaSoLayout"
            style="@style/Platform.MaterialComponents.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/editTextSDTLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtiTextMaSo"
                android:layout_width="@dimen/dp300"
                android:layout_height="wrap_content"
                android:hint="@string/nhapMaSo"
                android:inputType="text"
                android:textColor="#f000"
                android:textSize="@dimen/dp20"
                app:met_floatingLabel="normal"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="89dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextSDTLayout"
            style="@style/Platform.MaterialComponents.Light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:layout_constraintBottom_toTopOf="@+id/textViewHoTen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextMaSoLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtiTextSDT"
                android:layout_width="@dimen/dp300"
                android:layout_height="wrap_content"
                android:hint="@string/nhapSDT"
                android:inputType="phone"
                android:textColor="#f000"
                android:textSize="@dimen/dp20"
                app:met_floatingLabel="normal"
                tools:layout_editor_absoluteX="56dp"
                tools:layout_editor_absoluteY="89dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewHoTen"
            android:layout_width="@dimen/dp300"
            android:layout_height="wrap_content"
            android:hint="@string/hoTen"
            android:paddingVertical="@dimen/dp15"
            android:text="@{nguoidung.hoTen}"
            android:textColor="#f000"
            android:textSize="@dimen/dp20"
            app:layout_constraintBottom_toTopOf="@+id/textViewNgaySinh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSDTLayout"
            app:met_floatingLabel="normal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewNgaySinh"
            android:layout_width="@dimen/dp300"
            android:layout_height="wrap_content"
            android:hint="@string/ngaySinh"
            android:paddingVertical="@dimen/dp15"
            android:text="@{nguoidung.sinhNhat}"
            android:textColor="#f000"
            android:textSize="@dimen/dp20"
            app:layout_constraintBottom_toTopOf="@+id/textViewNganhHoc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewHoTen"
            app:met_floatingLabel="normal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewNganhHoc"
            android:layout_width="@dimen/dp300"
            android:layout_height="wrap_content"
            android:hint="@string/chuyenNganh"
            android:paddingVertical="@dimen/dp15"
            android:text="@{nguoidung.chuyenNganh}"
            android:textColor="#f000"
            android:textSize="@dimen/dp20"
            app:layout_constraintBottom_toTopOf="@+id/textViewLopHoc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNgaySinh"
            app:met_floatingLabel="normal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewLopHoc"
            android:layout_width="@dimen/dp300"
            android:layout_height="wrap_content"
            android:hint="@string/lopHoc"
            android:paddingVertical="@dimen/dp15"
            android:text="@{nguoidung.lopHoc}"
            android:textColor="#f000"
            android:textSize="@dimen/dp20"
            app:layout_constraintBottom_toTopOf="@+id/buttonDongY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewNganhHoc"
            app:met_floatingLabel="normal" />

        <Button
            android:id="@+id/buttonDongY"
            android:layout_width="@dimen/dp300"
            android:layout_height="wrap_content"
            android:background="@drawable/button_dangky"
            android:padding="@dimen/dp15"
            android:text="Đồng Ý"
            android:textColor="#6200EE"
            android:textSize="@dimen/dp20"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewLopHoc" />

        <ProgressBar
            android:id="@+id/progressBar8"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
