<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".View.Activity.DangNhapActivity"
    tools:layout_editor_absoluteY="81dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/dp200"
        android:layout_height="@dimen/dp200"
        android:background="@drawable/logo_gdu"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5"></de.hdodenhof.circleimageview.CircleImageView>

    <Button
        android:id="@+id/buttonDangKy"
        android:layout_width="@dimen/dp300"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/button_dangky"
        android:text="@string/DangKy"
        android:textColor="#6200EE"
        android:textSize="@dimen/dp20"
        app:layout_constraintBottom_toTopOf="@+id/textViewQuenMK"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDangNhap"></Button>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextEmailLayout"
        style="@style/Platform.MaterialComponents.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@+id/editTextMatKhauLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/icon"
        app:startIconDrawable="@drawable/ic_baseline_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="@dimen/dp300"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/dp20"
            app:met_floatingLabel="normal"

            tools:layout_editor_absoluteX="56dp"
            tools:layout_editor_absoluteY="250dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonDangNhap"
        android:layout_width="@dimen/dp300"
        android:layout_height="wrap_content"
        android:background="@drawable/button_dangnhap"
        android:gravity="center"
        android:text="@string/DangNhap"
        android:textColor="#FFFF"
        android:textSize="@dimen/dp20"
        app:layout_constraintBottom_toTopOf="@+id/buttonDangKy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextMatKhauLayout" />

    <TextView
        android:id="@+id/textViewQuenMK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dp15"
        android:text="Quên Mật Khẩu?"
        android:textColor="#51eaea"
        android:textSize="@dimen/dp15"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDangKy" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editTextMatKhauLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toTopOf="@+id/buttonDangNhap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailLayout"
        app:startIconDrawable="@drawable/ic_baseline_password">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextMatKhau"
            android:layout_width="@dimen/dp300"
            android:layout_height="wrap_content"
            android:hint="Mật Khẩu"
            android:inputType="textPassword"
            app:met_floatingLabel="normal"
            android:textSize="@dimen/dp20"
            tools:layout_editor_absoluteX="54dp"
            tools:layout_editor_absoluteY="344dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar7"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />
</androidx.constraintlayout.widget.ConstraintLayout>